--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
 									<img src="img/fresh-product_slide1.jpg" alt="product-fish">
 								</div>
 								<div class="swiper-slide__info">
-									<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
-									<div class="swiper-slide__price">14,99 ZŁ/KG</div>
-									<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									<div class="swiper-slide__wrap">
+										<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
+										<div class="swiper-slide__price">14,99 ZŁ/KG</div>
+										<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									</div>
 								</div>
 							</div>
 							<div class="swiper-slide ">
@@ -112,9 +114,11 @@
 									<img src="img/fresh-product_slide2.jpg" alt="product-fish">
 								</div>
 								<div class="swiper-slide__info">
-									<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
-									<div class="swiper-slide__price">14,99 ZŁ/KG</div>
-									<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									<div class="swiper-slide__wrap">
+										<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
+										<div class="swiper-slide__price">14,99 ZŁ/KG</div>
+										<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									</div>
 								</div>
 							</div>
 							<div class="swiper-slide ">
@@ -122,9 +126,11 @@
 									<img src="img/fresh-product_slide3.jpg" alt="product-shrimp">
 								</div>
 								<div class="swiper-slide__info">
-									<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
-									<div class="swiper-slide__price">14,99 ZŁ/KG</div>
-									<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									<div class="swiper-slide__wrap">
+										<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
+										<div class="swiper-slide__price">14,99 ZŁ/KG</div>
+										<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									</div>
 								</div>
 							</div>
 							<div class="swiper-slide ">
@@ -132,9 +138,11 @@
 									<img src="img/fresh-product_slide4.jpg" alt="product-fish">
 								</div>
 								<div class="swiper-slide__info">
-									<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
-									<div class="swiper-slide__price">14,99 ZŁ/KG</div>
-									<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									<div class="swiper-slide__wrap">
+										<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
+										<div class="swiper-slide__price">14,99 ZŁ/KG</div>
+										<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									</div>
 								</div>
 							</div>
 							<div class="swiper-slide ">
@@ -142,9 +150,11 @@
 									<img src="img/fresh-product_slide1.jpg" alt="product-fish">
 								</div>
 								<div class="swiper-slide__info">
-									<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
-									<div class="swiper-slide__price">14,99 ZŁ/KG</div>
-									<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									<div class="swiper-slide__wrap">
+										<span class="swiper-slide__title">DORADA ŚWIEŻA</span>
+										<div class="swiper-slide__price">14,99 ZŁ/KG</div>
+										<a class="btn-view" href="javascript:void(0)">ZAMÓW</a>
+									</div>
 								</div>
 							</div>
 						</div>
